feat: 缩略图接口
